Update Lucene log processing and search